<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_child_detail"
        android:icon="@drawable/ic_nav_child"
        android:title="@string/nav_child_detail" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_nav_schedule"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/nav_reminders"
        android:icon="@drawable/ic_nav_reminder"
        android:title="@string/nav_reminders" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />
</menu>

